--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -9,12 +9,14 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: Platane/snk@v2
+      - uses: actions/checkout@v3
+      
+      - uses: Platane/snk@v3
         with:
-          # VITAL: They must put YOUR username here
+          # VITAL: This MUST be YOUR username (AbdulRehman-18)
           github_user_name: AbdulRehman-18
           
+          # The list of files to generate
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
@@ -22,7 +24,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: push github-contribution-grid-snake.svg to the output branch
-        uses: crazy-max/ghaction-github-pages@v2.1.3
+        uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
           build_dir: dist
