--- a/.github/workflows/stats.yml
+++ b/.github/workflows/stats.yml
@@ -13,36 +13,39 @@ jobs:
     steps:
       - uses: lowlighter/metrics@latest
         with:
-          # THIS IS THE IMPORTANT PART
-          # It tells the script: "Go get the key from the secure box"
           token: ${{ secrets.METRICS_TOKEN }}
 
-          # Your User Details
+          # Your Details
           user: AbdulRehman-18
-          template: classic
-          base: header, activity, community, repositories, metadata
+          filename: github-metrics.svg
+          
+          # MINIMALIST CONFIGURATION
+          # We removed 'activity' and 'community' to declutter the view
+          base: header, repositories
           base_indepth: yes
           config_timezone: Asia/Kolkata
           
-          # Image Name
-          filename: github-metrics.svg
+          # THEME: Transparent background for a clean look
+          config_display: large
           
-          # Committing Logic
-          output_action: commit
-          committer_branch: output
-          committer_message: "Update metrics"
-
-          # 🎨 Plugins Section (The cool stuff)
+          # 1. Languages (The Bar Graph)
           plugin_languages: yes
           plugin_languages_ignored: html, css
-          plugin_languages_details: bytes-size, percentage
+          plugin_languages_details: percentage
           plugin_languages_limit: 8
           
+          # 2. 3D Calendar (The Pyramid)
           plugin_isocalendar: yes
           plugin_isocalendar_duration: full-year
           
+          # 3. Habits (Coding Time)
           plugin_habits: yes
           plugin_habits_from: 200
           plugin_habits_days: 14
-          plugin_habits_facts: yes
+          plugin_habits_facts: no  # Removed text facts for minimalism
           plugin_habits_charts: yes
+
+          # Committing Logic
+          output_action: commit
+          committer_branch: output
+          committer_message: "Update minimal metrics"
